# Broadband-Demand-Elasticity

./: .gitignore  01_download_itu_data.py  02_download_worldbank_data.py  CLAUDE.md  COMPLETE_ELASTICITY_SUMMARY.md  ELASTICITY_PUBLICATION_STRATEGY.md  FISHING_QUICK_REFERENCE.md  FISHING_RESULTS_SUMMARY.md  PUBLICATION_RESCUE_PLAN.md  QUICK_START_GUIDE.md  README.md  _check_df.py  _iv_diagnostic.py  additional_info.txt.txt  check_columns.py  check_comissingness.py  check_fig4.py  check_itu_excel.py  check_missing_patterns.py  check_ppp_data.py  check_se_impact.py  compare_itu_codes.py  compare_ppp_methods.py  convert_prices.py  create_comparison_excel.py  create_main_figure.py  download_conversion_factors.py  explain_azerbaijan.py  itu_correspondence.md  journal_requirements.md  literature review.docx  manuscript_refactoring_prompt.md  plan.md  prepare_for_main_analysis.py  pyproject.toml  requirements.txt  review.md  setup_project_structure.bat  test_new_itu_codes.py  validate_ppp_calculation.py  (+3 more)
.claude/: settings.local.json
broadband_elasticity.egg-info/: PKG-INFO  SOURCES.txt
claude_projects/: implementation_checklist.md  missing_data_framework.py  paper_guide.md  publication_tables.py  regression_pooling.py
code/: README.md  __init__.py  main.py
manuscript/: README.md  cover.md  cover.tex  cover_letter.tex  paper.aux  paper.bbl  paper.blg  paper.dvi  paper.fdb_latexmk  paper.fls  paper.out  paper.tex  paper_anonymous.aux  paper_anonymous.bbl  paper_anonymous.blg  paper_anonymous.tex  paper_macros.tex  references.bib  title_page.tex  titlepage.aux  (+1 more)
(+257 files in other folders)
