[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "broadband-elasticity"
version = "1.0.0"
description = "Broadband demand elasticity analysis: EaP vs EU panel, 2010-2024"
requires-python = ">=3.10"
# Runtime dependencies are managed via requirements.txt
# Install with: pip install -e . && pip install -r requirements.txt

[tool.setuptools.packages.find]
where = ["."]
include = ["code*"]

[tool.setuptools.package-data]
"code" = ["py.typed"]
